tests/NormalTests/paczka1/fuzzy1/34349725.err
Error in line 1: S352 S352 30,1
Error in line 2: mMWTPythp S352 78,6
Error in line 4: mMWTPythp S10 81,9
Error in line 21: jYf16 A288 252,43
Error in line 30: jYf16 S10 712,9
